<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tejaskoundinya.android.firequiz.gameplay.GameActivity">

    <LinearLayout
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/game_my_score_placeholder"
                android:id="@+id/game_myScore_textView" />

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/game_my_score_name_placeholder"
                android:id="@+id/game_myScore_label_textView" />
        </LinearLayout>

        <TextView
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_game_name_placeholder"
            android:id="@+id/game_gameName_textView" />

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/game_opponent_score_placeholder"
                android:id="@+id/game_opponentScore_textView" />

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/game_opponent_score_name_placeholder"
                android:id="@+id/game_opponentScore_label_textView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_question_placeholder"
            android:id="@+id/game_question_textView"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <RelativeLayout
                android:layout_weight="0.1"
                android:layout_width="match_parent"
                android:layout_height="0dp"></RelativeLayout>
            <LinearLayout
                android:layout_weight="0.2"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <RelativeLayout
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></RelativeLayout>
                <Button
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/game_option_1_placeholder"
                    android:id="@+id/game_option1_button"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal" />
                <RelativeLayout
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="0.2"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <RelativeLayout
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></RelativeLayout>
                <Button
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/game_option_2_placeholder"
                    android:id="@+id/game_option2_button"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal" />
                <RelativeLayout
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="0.2"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <RelativeLayout
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></RelativeLayout>
                <Button
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/game_option_3_placeholder"
                    android:id="@+id/game_option3_button"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal" />
                <RelativeLayout
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="0.2"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <RelativeLayout
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></RelativeLayout>
                <Button
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/game_option_4_placeholder"
                    android:id="@+id/game_option4_button"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal" />
                <RelativeLayout
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"></RelativeLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_weight="0.1"
                android:layout_width="match_parent"
                android:layout_height="0dp"></RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
